[package]
name = "gated-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
awc = "3"
env_logger = "0.11"
futures-util = { version = "0.3", features = ["alloc"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.39"
tokio = { version = "1", features = ["sync"] }
