[package]
name = "gated-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
all-smi = "0.22.0"
awc = "3"
env_logger = "0.11"
futures-util = { version = "0.3", features = ["alloc"] }
gfxinfo = { version = "0.1.2", features = ["amd", "gpu_info"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sse-core = "0.2.1"
sysinfo = "0.39"
tokio = { version = "1", features = ["sync"] }
